tests/NormalTests/paczka1/small_fuzzy/63079226.err
Error in line 5: HplgwAl A986 64,7
Error in line 9: MH1ajayUb A693 17,3
Error in line 11: MH1ajayUb A96 46,0
Error in line 16: MH1ajayUb A986 -1,3
